@@ -230,6 +230,10 @@ extern int set_job_resources_node(job_resources_t *job_resrcs_ptr,
 extern int count_job_resources_node(job_resources_t *job_resrcs_ptr,
 				    uint32_t node_id);
 
+/* Return a copy of core_bitmap only for the specific node */
+extern bitstr_t * copy_job_resources_node(job_resources_t *job_resrcs_ptr,
+					  uint32_t node_id);
+
 /* Get socket and core count for a specific node_id (zero origin) */
 extern int get_job_resources_cnt(job_resources_t *job_resrcs_ptr,
 				 uint32_t node_id, uint16_t *socket_cnt,
