@@ -1967,7 +1967,8 @@ static int _add_job_to_nodes(struct cr_record *cr_ptr,
 				gres_list = node_ptr->gres_list;
 			gres_plugin_job_alloc(job_ptr->gres_list, gres_list,
 					      node_cnt, node_offset, cpu_cnt,
-					      job_ptr->job_id, node_ptr->name);
+					      job_ptr->job_id, node_ptr->name,
+					      NULL);
 			gres_plugin_node_state_log(gres_list, node_ptr->name);
 		}
 
@@ -2234,7 +2235,8 @@ static void _init_node_cr(void)
 						      job_resrcs_ptr->
 						      cpus[node_offset],
 						      job_ptr->job_id,
-						      node_ptr->name);
+						      node_ptr->name,
+						      NULL);
 			}
 
 			part_cr_ptr = cr_ptr->nodes[i].parts;
